--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -1,23 +1,29 @@
 [versions]
-agp = "8.11.2"
-android-compileSdk = "36"
+agp = "8.4.1"
+android-compileSdk = "34"
 android-minSdk = "24"
-android-targetSdk = "36"
-androidx-activity = "1.11.0"
-androidx-appcompat = "1.7.1"
-androidx-core = "1.17.0"
-androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.4"
-androidx-testExt = "1.3.0"
+android-targetSdk = "34"
+androidx-activity = "1.9.0"
+androidx-appcompat = "1.7.0"
+androidx-core = "1.13.1"
+androidx-espresso = "3.6.1"
+androidx-lifecycle = "2.8.2"
+androidx-testExt = "1.2.1"
 composeHotReload = "1.0.0-beta07"
-composeMultiplatform = "1.9.0"
 junit = "4.13.2"
-kotlin = "2.2.20"
-kotlinx-coroutines = "1.10.2"
+kotlinx-coroutines = "1.8.1"
+kotlin = "2.0.0"
+composeMultiplatform = "1.6.11"
 
-ktor_version="3.3.1"
-kotlinx-datetime = "0.7.0"
+ktor_version="2.3.12"
+kotlinx-datetime = "0.6.0"
 kotlinxSerialization = "1.7.1"
+
+
+room = "2.6.1"
+sqlite = "2.6.1"
+kspVersion="2.0.0-1.0.23"
+
 
 
 [libraries]
@@ -46,6 +52,10 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 #serialization
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
+#room
+androidx-sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 
 
@@ -60,6 +70,11 @@ composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "com
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+#serialization
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
+#room
+ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
+androidx-room = { id = "androidx.room", version.ref = "room" }
 
