--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -15,16 +15,20 @@ kotlinx-coroutines = "1.8.1"
 kotlin = "2.0.0"
 composeMultiplatform = "1.6.11"
 
-ktor_version="2.3.12"
+ktor_version = "2.3.12"
 kotlinx-datetime = "0.6.0"
 kotlinxSerialization = "1.7.1"
+kotlinx-io = "0.7.0"
 
 
 room = "2.6.1"
 sqlite = "2.6.1"
-kspVersion="2.0.0-1.0.23"
+kspVersion = "2.0.0-1.0.23"
 
+navigation-compose = "2.8.0"
 
+data-store = "1.1.7"
+data-store-preferences = "1.1.7"
 
 [libraries]
 
@@ -43,11 +47,15 @@ kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-s
 
 #ktor
 
-ktor-client-core = {module = "io.ktor:ktor-client-core", version.ref = "ktor_version"}
-ktor-client-cio = {module = "io.ktor:ktor-client-cio", version.ref = "ktor_version"}
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor_version" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor_version" }
 
 #datetime
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+
+#io
+
+kotlinx-io = {module = "org.jetbrains.kotlinx:kotlinx-io", version.ref = "kotlinx-io" }
 
 #serialization
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
@@ -58,7 +66,10 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 
+navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 
+data-store = { module = "androidx.datastore:datastore", version.ref = "data-store" }
+data-store-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "data-store-preferences" }
 
 
 
