--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlinx-coroutines = "1.8.1"
 kotlin = "2.0.0"
 composeMultiplatform = "1.6.11"
 
+
 ktor_version = "2.3.12"
 kotlinx-datetime = "0.6.0"
 kotlinxSerialization = "1.7.1"
@@ -49,6 +50,8 @@ kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-s
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor_version" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor_version" }
+ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor_version" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor_version" }
 
 #datetime
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
