--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -1,35 +1,38 @@
 [versions]
-agp = "8.4.1"
-android-compileSdk = "34"
+agp = "8.11.2"
+android-compileSdk = "36"
 android-minSdk = "24"
-android-targetSdk = "34"
-androidx-activity = "1.9.0"
-androidx-appcompat = "1.7.0"
-androidx-core = "1.13.1"
-androidx-espresso = "3.6.1"
-androidx-lifecycle = "2.8.2"
-androidx-testExt = "1.2.1"
-composeHotReload = "1.0.0-beta07"
+android-targetSdk = "36"
+androidx-activity = "1.11.0"
+androidx-appcompat = "1.7.1"
+androidx-core = "1.17.0"
+androidx-espresso = "3.7.0"
+androidx-lifecycle = "2.9.5"
+androidx-testExt = "1.3.0"
+composeHotReload = "1.0.0-rc02"
 junit = "4.13.2"
-kotlinx-coroutines = "1.8.1"
-kotlin = "2.0.0"
-composeMultiplatform = "1.6.11"
+kotlinx-coroutines = "1.10.2"
+kotlin = "2.2.20"
+composeMultiplatform = "1.9.1"
 
 
-ktor_version = "2.3.12"
-kotlinx-datetime = "0.6.0"
-kotlinxSerialization = "1.7.1"
-kotlinx-io-core = "0.3.0"
+ktor_version = "3.3.1"
+kotlinx-datetime = "0.7.1"
+kotlinxSerialization = "1.9.0"
+kotlinx-io-core = "0.8.0"
 
 
-room = "2.6.1"
+room = "2.8.3"
 sqlite = "2.6.1"
-kspVersion = "2.0.0-1.0.23"
+kspVersion = "2.2.20-2.0.4"
 
-navigation-compose = "2.8.0"
+navigation-compose = "2.9.5"
 
 data-store = "1.1.7"
 data-store-preferences = "1.1.7"
+
+kamel = "1.0.8"
+precompose = "1.6.2"
 
 [libraries]
 
@@ -73,6 +76,15 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 
 data-store = { module = "androidx.datastore:datastore", version.ref = "data-store" }
 data-store-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "data-store-preferences" }
+
+
+
+kamel-image-default = { module = "media.kamel:kamel-image-default", version.ref = "kamel" }
+#kamel-image-compose = { module = "media.kamel:kamel-image-compose", version.ref = "kamel" }
+#kamel-image-resources = { module = "media.kamel:kamel-image-resources", version.ref = "kamel" }
+
+
+precompose = { module = "moe.tlaster:precompose", version.ref = "precompose" }
 
 
 
