--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -3,36 +3,41 @@ agp = "8.13.1"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
-androidx-activity = "1.11.0"
+androidx-activity = "1.9.3"
 androidx-appcompat = "1.7.1"
-androidx-core = "1.17.0"
-androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.5"
-androidx-testExt = "1.3.0"
+androidx-core = "1.13.1"
+androidx-espresso = "3.6.1"
+androidx-lifecycle = "2.8.4"
+androidx-testExt = "1.2.1"
 composeHotReload = "1.0.0-rc02"
 junit = "4.13.2"
-kotlinx-coroutines = "1.10.2"
-kotlin = "2.2.20"
-composeMultiplatform = "1.9.1"
+kotlinx-coroutines = "1.9.0"
+kotlin = "2.1.0"
+composeMultiplatform = "1.7.1"
 
 
-ktor_version = "3.3.1"
-kotlinx-datetime = "0.7.1"
-kotlinxSerialization = "1.9.0"
-kotlinx-io-core = "0.8.0"
+ktor_version = "3.0.1"
+kotlinx-datetime = "0.6.1"
+kotlinxSerialization = "1.7.3"
+kotlinx-io-core = "0.5.4"
 
 
-room = "2.8.3"
-sqlite = "2.6.1"
-kspVersion = "2.2.20-2.0.4"
+room = "2.7.0-alpha11"
+sqlite = "2.5.0-alpha11"
+kspVersion = "2.1.0-1.0.29"
 
-navigation-compose = "2.9.5"
+navigation-compose = "2.8.0-alpha10"
 
-data-store = "1.1.7"
-data-store-preferences = "1.1.7"
+data-store = "1.1.1"
+data-store-preferences = "1.1.1"
 
-kamel = "1.0.8"
+kamel = "1.0.0"
 
+slf4j = "2.0.9"
+
+# KOIN
+koin = "4.0.0"
+koin-compose-multiplatform = "4.0.0"
 
 
 [libraries]
@@ -73,7 +78,7 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 
-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 
 data-store = { module = "androidx.datastore:datastore", version.ref = "data-store" }
 data-store-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "data-store-preferences" }
@@ -83,6 +88,16 @@ data-store-preferences = { module = "androidx.datastore:datastore-preferences", 
 kamel-image-default = { module = "media.kamel:kamel-image-default", version.ref = "kamel" }
 
 ui-window = { module = "org.jetbrains.compose.ui:ui-window", version.ref = "composeMultiplatform" }
+
+# KOIN
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose-multiplatform" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin-compose-multiplatform" }
+
+# SLF4J
+slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
 
 [plugins]
@@ -100,4 +115,3 @@ serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref 
 #room
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
-
