--- a/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
+++ b/TuCiudadDeCerca/TuCiudadDeCerca/gradle/libs.versions.toml
@@ -39,6 +39,9 @@ slf4j = "2.0.9"
 koin = "4.0.0"
 koin-compose-multiplatform = "4.0.0"
 
+# VOYAGER
+voyager = "1.1.0-beta03"
+
 
 [libraries]
 
@@ -98,6 +101,14 @@ koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", ver
 
 # SLF4J
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
+
+# VOYAGER
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
+voyager-screenmodel = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyager" }
+voyager-bottom-sheet-navigator = { module = "cafe.adriel.voyager:voyager-bottom-sheet-navigator", version.ref = "voyager" }
+voyager-tab-navigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager" }
+voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
+voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
 
 
 [plugins]
